changed title color

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="row">
       <div class="s12 m6 l4">
         <h4 id="linkToServices">What we do?</h4>
-        <p class="left-align light">Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
+        <p class="left-align white-text">Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
           only limited by your imagination! Airpilot UK can supply drone aerial photography and video for:-</p>
       </div>
     </div>
@@ -158,7 +158,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 text-white">Limited, only by your imagination!</h4>
+          <h4 class="header col s12 white-text">Limited, only by your imagination!</h4>
         </div>
       </div>
     </div>
@@ -240,7 +240,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light">An eagle eye view of your golf course.</h4>
+          <h4 class="header col s12 white-text">An eagle eye view of your golf course.</h4>
         </div>
       </div>
     </div>
@@ -270,7 +270,7 @@
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h4 class="header col s12 light">Insepction on a new level.</h4>
+          <h4 class="header col s12 white-text">Insepction on a new level.</h4>
         </div>
       </div>
     </div>
