changed what we do color

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="row">
       <div class="s12 m6 l4">
         <h4 id="linkToServices">What we do?</h4>
-        <p class="left-align white-text">Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
+        <p class="left-align light">Technological advances in <strong>UAV (Drone)</strong>, aerial photography and videography have given many more businesses and individuals access to high definition drone aerial photographs and video at affordable prices. The applications are
           only limited by your imagination! Airpilot UK can supply drone aerial photography and video for:-</p>
       </div>
     </div>
