changed murray to Marc

--- a/index.html
+++ b/index.html
@@ -341,10 +341,10 @@
       <div class="row">
         <div class="col l6 s12">
           <h5 class="white-text" id="linkToAboutUs">About Us</h5>
-          <p class="grey-text">Airpilot UK was set up in 2017 by owner Murray Rose and are based in West Essex, UK. Murray was trained and took his extensive UAV (Unmanned Aerial Vehicle), tests with UAV8 Ltd and has aerial Permission for Commercial Operation (PfCO) granted
+          <p class="grey-text">Airpilot UK was set up in 2017 by owner Marc Rose and are based in West Essex, UK. Marc was trained and took his extensive UAV (Unmanned Aerial Vehicle), tests with UAV8 Ltd and has aerial Permission for Commercial Operation (PfCO) granted
             from the Civil Aviation Authority (CAA), to photograph and shoot video in a professional capacity anywhere in the United Kingdom. We fly UAVs or “Drones” with state of the art camera stabilisation to capture super smooth footage of up to 4k.
             Airpilot UK pilots are thoroughly trained and fully insured.</p>
-          <p id="linkToContact" class="grey-text">Contact :- Murray Rose on <span class="blue-text">07762 711585</span> or <a href="mailto:info@airpilot.uk">info@airpilot.uk</a></p>
+          <p id="linkToContact" class="grey-text">Contact :- Marc Rose on <span class="blue-text">07762 711585</span> or <a href="mailto:info@airpilot.uk">info@airpilot.uk</a></p>
 
 
         </div>
