--- a/index.html
+++ b/index.html
@@ -370,6 +370,8 @@
           <div class="certs">
             <img src="static/img/LogoSliced.png">
             <img src="static/img/uav8.jpeg">
+            <img src="static/img/drone_pilot_qual_logo.jpg">
+            <img src="static/img/verified-300x129.png">
           </div>
         </div>
       </div>
